<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco"
    android:orientation="vertical"
    tools:context=".Menu.RegistrarMenu">
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margen_15"
        android:singleLine="false"
        android:text="@string/RegMenu"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        android:textStyle="bold|italic" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/margen_30"
        android:layout_marginTop="@dimen/margen_30"
        android:background="#f5f6fa">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipoMenu"
            android:textSize="@dimen/margen_15"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/margen_20"
            android:layout_marginLeft="@dimen/margen_20"
            android:textStyle="normal"/>


        <RadioGroup
            android:id="@+id/tipoMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margen_5"
            android:layout_marginHorizontal="@dimen/margen_40"
            android:contextClickable="true">

            <RadioButton
                android:id="@+id/desayuno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desayuno" />

            <RadioButton
                android:id="@+id/almuerzo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Almuerzo" />

            <RadioButton
                android:id="@+id/cena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lunch" />

            <RadioButton
                android:id="@+id/lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/EntreDia" />

            <RadioButton
                android:id="@+id/mediaTarde"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Cena" />
        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/ed_pecio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/precioMenu"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginHorizontal="@dimen/margen_30"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/ed_descrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/descripcionMenu"
                android:inputType="text"
                android:layout_marginHorizontal="@dimen/margen_30"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_regMenu"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/margen_40"
            android:background="@color/beniukonBronze"
            android:text="Registrar"
            android:layout_margin="@dimen/margen_30"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>